Fix footer button alignment

--- a/src/components/common/footer.less
+++ b/src/components/common/footer.less
@@ -1,6 +1,4 @@
 .buttons {
-    float: left;
-    padding: 15px;
+    padding: 15px 15px;
     text-align: center;
-    width: 100%;
 } 
